RESULTS/AutoSpec/raw_results/out-4o-sv-comp/0013_0007/0013_merged.txt
/home/yangfp/AutoSpec/AutoSpec1/out/0013_0007/0013_merged.c:48:9: error: unterminated comment
   48 |         /*@;
      |         ^
